delete user by id

--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -20,7 +20,7 @@
                 <th>{{ user.id }}</th>
                 <th>{{ user.username }}</th>
                 <th>{{ user.email }}</th>
-                <th><a href="/delete/{{ user.username }}">delete</a> </th>
+                <th><a href="/delete/{{ user.id }}">delete</a> </th>
             </tr>
             {% endfor %}
         </table>
